<resources>
    <string name="app_name">CO-WIN Integration</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_mobile_number">Enter CO-WIN registered mobile number</string>
    <string name="prompt_confirm_otp">Confirm OTP</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">VERIFY</string>
    <string name="enter">ENTER</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid mobile number</string>
    <string name="invalid_otp_length">Not a valid OTP length</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="otp_failed">"OTP failed"</string>
    <string name="generate_otp_failed">"Generate OTP failed"</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="failed">"failed"</string>
    <string name="title_activity_dashboard">Profile Creator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Siddharaj N</string>
    <string name="nav_header_subtitle">title@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Education_Details">Education details</string>
    <string name="other_info">Other information</string>

    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="in_progres">In Progress</string>
    <string name="user_registration">Sign Up</string>

    <string name="profile">Profile</string>
    <string name="property_designation">Property Designation</string>
    <string name="PersonalInformation">Personal Information</string>


    <string name="Next">Continue</string>
    <string name="Submit">Submit</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="EmailId">EmailId</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="DOB">DOB</string>


    <string name="EducationDetails">Education details</string>
    <string name="university_name">University name</string>
    <string name="course_name">Course name</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>

    <string name="CompanyDetails">Company details</string>
    <string name="Company_name">Company name</string>
    <string name="designation">Designation</string>
    <string name="Awards_and_recognitions">Awards and recognitions</string>
    <string name="experience">experience (in months)</string>
    <string name="Responsibilities">Responsibilities</string>
    <string name="Project_details">Project details</string>
    <string name="Project_title">Project title</string>
    <string name="technology">Technology</string>
    <string name="duration">Duration</string>
    <string name="description">Description</string>

    <string name="empty_field">Please fill required details </string>


</resources>