<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">


    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.profilecreator.ui.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard_item">


    </fragment>

    <fragment
        android:id="@+id/PersonalInformationFragment"
        android:name="com.profilecreator.ui.PersonalInformationFragment"
        android:label="@string/PersonalInformation"
        tools:layout="@layout/fragment_personal_info">

        <action
            android:id="@+id/action_PersonalInformationFragment_to_EducationDetailsFragment"
            app:destination="@id/EducationDetailsFragment"
            app:popUpTo="@id/EducationDetailsFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/EducationDetailsFragment"
        android:name="com.profilecreator.ui.EducationDetailsFragment"
        android:label="@string/Education_Details"
        tools:layout="@layout/fragment_education_details">

    </fragment>

    <fragment
        android:id="@+id/CompanyDetailsFragment"
        android:name="com.profilecreator.ui.CompanyDetailsFragment"
        android:label="@string/CompanyDetails"
        tools:layout="@layout/fragment_company_details">

    </fragment>

    <fragment
        android:id="@+id/OtherInfoFragment"
        android:name="com.profilecreator.ui.OtherInfoFragment"
        android:label="@string/other_info"
        tools:layout="@layout/fragment_other_info">

        <action
            android:id="@+id/action_OtherInfoFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/ProjectDetailsFragment"
        android:name="com.profilecreator.ui.ProjectDetailsFragment"
        android:label="@string/Project_details"
        tools:layout="@layout/fragment_project_details">

    </fragment>
</navigation>