<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".ui.PersonalInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/lastName"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/firstName"
            android:padding="10dp"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/lastName"
            android:layout_marginTop="45dp"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phoneNumber"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            app:layout_constraintTop_toBottomOf="@+id/lastName"/>

        <EditText
            android:id="@+id/EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/EmailId"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"/>

        <EditText
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/address1"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/EmailId"/>

        <EditText
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/address2"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/address1"/>

        <EditText
            android:id="@+id/DOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/DOB"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/address2"/>

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/Submit"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/selector_btn_login"
            android:elevation="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/DOB"/>

        <Button
            android:id="@+id/NEXT"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/Next"
            android:background="@drawable/selector_btn_login"
            android:elevation="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/DOB"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>