<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EducationDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/projectTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Project_title"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/technology1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/technology"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/projectTitle1"/>

        <EditText
            android:id="@+id/duration1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/duration"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/technology1"/>

        <EditText
            android:id="@+id/description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/duration1"/>



        <EditText
            android:id="@+id/projectTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="60dp"
            android:hint="@string/Project_title"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/description1"/>

        <EditText
            android:id="@+id/technology2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/technology"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/projectTitle2"/>

        <EditText
            android:id="@+id/duration2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/duration"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/technology2"/>

        <EditText
            android:id="@+id/description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/duration2"/>

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/Submit"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/selector_btn_login"
            android:elevation="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/description2"/>

        <Button
            android:id="@+id/NEXT"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/Next"
            android:background="@drawable/selector_btn_login"
            android:elevation="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/description2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>