<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EducationDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/universityName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/university_name"
            android:inputType="text"

            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/courseName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/course_name"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/universityName1"/>

        <EditText
            android:id="@+id/fromDate1"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/courseName1"
            android:hint="@string/from_date"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginRight="5dp"
            app:layout_constraintEnd_toStartOf="@+id/toDate1"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/toDate1"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/courseName1"
            android:hint="@string/to_date"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@+id/fromDate1"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/universityName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="70dp"
            android:hint="@string/university_name"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/toDate1"/>

        <EditText
            android:id="@+id/courseName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/course_name"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/universityName2"/>

        <EditText
            android:id="@+id/fromDate2"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/courseName2"
            android:hint="@string/from_date"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginRight="5dp"
            app:layout_constraintEnd_toStartOf="@+id/toDate2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/toDate2"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/courseName2"
            android:hint="@string/to_date"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@+id/fromDate2"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/universityName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="70dp"
            android:hint="@string/university_name"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/toDate2"/>

        <EditText
            android:id="@+id/courseName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/course_name"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/universityName3"/>

        <EditText
            android:id="@+id/fromDate3"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/courseName3"
            android:hint="@string/from_date"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginRight="5dp"
            app:layout_constraintEnd_toStartOf="@+id/toDate3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/toDate3"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/courseName3"
            android:hint="@string/to_date"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@+id/fromDate2"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/Submit"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/selector_btn_login"
            android:elevation="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/toDate3"/>

        <Button
            android:id="@+id/NEXT"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/Next"
            android:background="@drawable/selector_btn_login"
            android:elevation="5dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/toDate3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>